@@ -29,7 +29,7 @@ define("MESSAGE_TOOLBAR_HELP",1073);
 define("MESSAGE_PAGE_SAVE", 952);
 define("MESSAGE_PAGE_SYNTAX_COLOR", 725);
 define("MESSAGE_PAGE_ACTION_REINDENT", 726);
-define("MESSAGE_PAGE_LABEL", 814);
+define("MESSAGE_PAGE_LABEL", 1745);
 define("MESSAGE_PAGE_STYLESHEET", 1486);
 define("MESSAGE_PAGE_WYSIWYG", 1487);
 define("MESSAGE_PAGE_JAVASCRIPT", 1488);
@@ -40,6 +40,8 @@ define("MESSAGE_PAGE_EDIT_JS", 1492);
 define("MESSAGE_PAGE_EDIT_WYSIWYG", 1493);
 define("MESSAGE_TOOLBAR_HELP_DESC", 1494);
 define("MESSAGE_PAGE_DEFINITION", 1495);
+define("MESSAGE_PAGE_CREATE_FILE", 1744);
+define("MESSAGE_PAGE_TXT", 273);
 
 function checkNode($value) {
 	return $value != 'source' && io::strpos($value, '..') === false;
@@ -47,7 +49,6 @@ function checkNode($value) {
 
 //Controler vars
 $winId = sensitiveIO::request('winId', '', 'printTemplateWindow');
-$fileType = sensitiveIO::request('type', array('css', 'js'));
 $node = sensitiveIO::request('node', 'checkNode', '');
 
 //load interface instance
@@ -63,33 +64,23 @@ if (!$cms_user->hasAdminClearance(CLEARANCE_ADMINISTRATION_EDIT_TEMPLATES)) {
 	$view->show();
 }
 
-switch ($fileType) {
-	case 'css':
-		$dir = PATH_REALROOT_FS.'/css/';
-		$allowedFiles = array(
-			'css' => array('name' => $cms_language->getMessage(MESSAGE_PAGE_STYLESHEET), 'class' => 'atm-css'),
-			'xml' => array('name' => $cms_language->getMessage(MESSAGE_PAGE_WYSIWYG), 'class' => 'atm-xml'),
-		);
-	break;
-	case 'js':
-		$dir = PATH_REALROOT_FS.'/js/';
-		$allowedFiles = array('js' => array('name' => $cms_language->getMessage(MESSAGE_PAGE_JAVASCRIPT), 'class' => 'atm-js'));
-	break;
-	default:
-		CMS_grandFather::raiseError('Unknown fileType to use ...');
-		$view->show();
-	break;
-}
+$allowedFiles = array(
+	'css' => array('name' => $cms_language->getMessage(MESSAGE_PAGE_STYLESHEET), 'class' => 'atm-css'),
+	'xml' => array('name' => $cms_language->getMessage(MESSAGE_PAGE_WYSIWYG), 'class' => 'atm-xml'),
+	'js' => array('name' => $cms_language->getMessage(MESSAGE_PAGE_JAVASCRIPT), 'class' => 'atm-js'),
+	'txt' => array('name' => $cms_language->getMessage(MESSAGE_PAGE_TXT), 'class' => 'atm-txt'),
+);
 
-$file = $dir.$node;
+$file = PATH_REALROOT_FS.'/'.$node;
 if (!is_file($file) && !is_dir($file)) {
 	CMS_grandFather::raiseError('Queried file does not exists.');
 	$view->show();
 }
+
 if (!is_file($file)) {
 	//file creation
 	$fileCreation = true;
-	$extension = $fileType;
+	$extension = '';
 	$fileId = md5(rand());
 	$fileDefinition = '';
 	$labelField = "{
@@ -153,8 +144,38 @@ switch ($extension) {
 		';
 		$title = sensitiveIO::sanitizeJSString($cms_language->getMessage(MESSAGE_PAGE_EDIT_WYSIWYG).' '.$node);
 	break;
+	default:
+		$codemirrorConf = '';
+		$title = sensitiveIO::sanitizeJSString($cms_language->getMessage(MESSAGE_PAGE_CREATE_FILE));
+	break;
 }
+
 $automnePath = PATH_MAIN_WR;
+$colorcoding = '';
+if ($codemirrorConf) {
+	$colorcoding = "{
+		xtype:			'checkbox',
+		boxLabel:		'{$cms_language->getJSMessage(MESSAGE_PAGE_SYNTAX_COLOR)}',
+		hideLabel:		true,
+		listeners:		{'check':function(field, checked) {
+			if (checked) {
+				editor = CodeMirror.fromTextArea('defText-{$fileId}', {
+					{$codemirrorConf}
+					path: 			\"{$automnePath}/codemirror/js/\",
+					iframeClass:	'x-form-text',
+					lineNumbers:	true,
+					textWrapping:	false,
+					initCallback:	function(){
+						editor.reindent();
+					}
+				});
+				field.disable();
+				Ext.getCmp('reindent-{$fileId}').show();
+			}
+		}, scope:this}
+	},";
+}
+
 $jscontent = <<<END
 	var fileWindow = Ext.getCmp('{$winId}');
 	fileWindow.fileId = '{$fileId}';
@@ -190,27 +211,7 @@ $jscontent = <<<END
 	        labelAlign: 		'top'
 	    },
 		labelAlign: 		'top',
-		items:[{$labelField}{
-			xtype:			'checkbox',
-			boxLabel:		'{$cms_language->getJSMessage(MESSAGE_PAGE_SYNTAX_COLOR)}',
-			hideLabel:		true,
-			listeners:		{'check':function(field, checked) {
-				if (checked) {
-					editor = CodeMirror.fromTextArea('defText-{$fileId}', {
-						{$codemirrorConf}
-						path: 			"{$automnePath}/codemirror/js/",
-						iframeClass:	'x-form-text',
-						lineNumbers:	true,
-						textWrapping:	false,
-						initCallback:	function(){
-							editor.reindent();
-						}
-					});
-					field.disable();
-					Ext.getCmp('reindent-{$fileId}').show();
-				}
-			}, scope:this}
-		},{
+		items:[{$labelField}{$colorcoding}{
 			id:				'defText-{$fileId}',
 			xtype:			'textarea',
 			name:			'definition',
@@ -275,7 +276,6 @@ $jscontent = <<<END
 					form.submit({
 						params:{
 							action:		'{$action}',
-							type:		'{$fileType}',
 							node:		'{$node}'
 						},
 						scope:this
