@@ -17,6 +17,7 @@ V4.2.0 (in progress)
 [REFACTOR] : Use a temporary table to store poly objects search ids to avoid MySQL limitations
 [REFACTOR] : Completely refactor cms_aliases module for a better integration in Automne 4
 [REFACTOR] : Refactor single sub objects administration to allow creation and modification
+[REFACTOR] : Refactor JS and CSS editor to add robots.txt edition
 [FEATURE] : Add oembed object and oembed polymod field (external media field). Update Mediacenter to manage oembed medias
 [FEATURE] : Add parent page selection on new page creation
 [FEATURE] : Add variable type {page:father:XXX} to get infos from current parent page
